deployments/gitea/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`code.service.sprint.luchtenberg.eu`)
    services:
    - name: gitea-http
      port: 3000
  tls:
    secretName: code-service-sprint-luchtenberg-eu-production-tls
